user-apps/miscellaneous/paperless/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: paperless
    tier: web
  name: paperless
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: paperless
      tier: web
  template:
    metadata:
      labels:
        app: paperless
        tier: web
        netpol.cilium.io/egress-to-kube-dns: "true"
        netpol.cilium.io/egress-to-world: "true"
        netpol.cilium.io/egress-to-intra: "true"
        netpol.cilium.io/ingress-from-ingress: "true"
    spec:
      priorityClassName: application-critical
      # Paperless pods need to be scheduled on the same node to share the pvc
      # This prevents Multi-Attach errors if replicas are increased
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - paperless
            topologyKey: kubernetes.io/hostname
      containers:
      - image: ghcr.io/paperless-ngx/paperless-ngx:3.3.0
        name: paperless-ngx
        ports:
        - containerPort: 8000
          name: http 
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 2000m  # Consider PAPERLESS_TASK_WORKERS * PAPERLESS_THREADS_PER_WORKER to not exceed your CPU core count
            memory: 3Gi
        volumeMounts:
        - name: data
          mountPath: /usr/src/paperless/data
        - name: media
          mountPath: /usr/src/paperless/media
        - name: export
          mountPath: /usr/src/paperless/export
        # - name: consume
        #   mountPath: /usr/src/paperless/consume
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: paperless-data-pvc
      - name: media
        persistentVolumeClaim:
          claimName: paperless-media-pvc
      - name: export
        persistentVolumeClaim:
          claimName: paperless-export-pvc
      # - name: consume
      #   persistentVolumeClaim:
      #     claimName: paperless-consume-pvc
