user-apps/miscellaneous/paperless/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  labels:
    app: paperless
spec:
  type: ClusterIP 
  selector:
    app: paperless
  ports:
    - name: http
      port: 8000
      targetPort: 8000
