user-apps/miscellaneous/paperless/web/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paperless
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Miscellaneous
    gethomepage.dev/name: Paperless
    gethomepage.dev/icon: https://raw.githubusercontent.com/paperless-ngx/paperless-ngx/refs/heads/dev/src-ui/src/icon-192.png
    gethomepage.dev/href: https://docs.tamhomelab.com
    gethomepage.dev/description: Document Management
    gethomepage.dev/pod-selector: ""
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway-internal
      namespace: gateway
  hostnames:
    - "docs.tamhomelab.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: paperless
          port: 8000
          weight: 1
